docs(cruise control): Clarify Cruise Control optimization proposals and rebalance execution
Signed-off-by: prmellor <pmellor@redhat.com>

--- a/documentation/assemblies/cruise-control/assembly-cruise-control-concepts.adoc
+++ b/documentation/assemblies/cruise-control/assembly-cruise-control-concepts.adoc
@@ -8,18 +8,18 @@
 = Using Cruise Control for cluster rebalancing
 
 [role="_abstract"]
-Cruise Control is an open-source application designed to run alongside Kafka to help optimize use of cluster resources by doing the following:
+Cruise Control is an open-source application designed to run alongside Kafka to help optimize the use of cluster resources by doing the following:
 
 * Monitoring cluster workload
 * Rebalancing partitions based on predefined constraints
 
-Cruise Control operations help with running a more balanced Kafka cluster that uses brokers more efficiently.
+Cruise Control operations help maintain a more balanced Kafka cluster by using brokers more efficiently.
 
-As Kafka clusters evolve, some brokers may become overloaded while others remain underutilized. 
-Cruise Control addresses this imbalance by modeling resource utilization at the replica level--including, CPU, disk, network load--and generating optimization proposals (which you can approve or reject) for balanced partition assignments based on configurable optimization goals.
+As Kafka clusters evolve, some brokers may become overloaded while others remain underutilized.
+Cruise Control addresses this imbalance by modeling resource utilization at the replica level, including CPU, disk, and network load, and by generating optimization proposals to assess the impact of rebalancing based on configurable optimization goals.
 
-Optimization proposals are configured and generated using a `KafkaRebalance` resource. 
-You can configure the resource using an annotation so that optimization proposals are approved automatically or manually.
+Optimization proposals are configured and generated using a `KafkaRebalance` resource.
+You can configure the resource to require manual approval or to automatically trigger a cluster rebalance.
 
 NOTE: Strimzi provides xref:config-examples-{context}[example configuration files for Cruise Control].
 
